--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
+    "react-paginate": "^8.1.3",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
